--- a/backend/views/user/home.ejs
+++ b/backend/views/user/home.ejs
@@ -1596,8 +1596,7 @@
           <div>
             <img class="footer-logo" src="images/stayrare/footer-logo.png" alt="">
           </div>
-          <p class="footer-address">TC 56/2042 , Manchadi, Anthivilakku, <br>
-Karumom PO, Thiruvananthapuram, <br> Kerala – 695002
+          <p class="footer-address">Stayrare , Thiruvananthapuram, <br> Kerala , India - 695002
 </p>
           <p class="m-0">
             <a style="color: white;" href="mailto:stayrareofficial@gmail.com">✉️ <strong
@@ -1646,7 +1645,7 @@ Karumom PO, Thiruvananthapuram, <br> Kerala – 695002
             <li class="sub-menu__item"><a href="/account" class="menu-link menu-link_us-s">My Account</a></li>
             <li class="sub-menu__item"><a href="/terms_and_conditions" class="menu-link menu-link_us-s">Terms & Conditions</a></li>
             <li class="sub-menu__item"><a href="/privacy_policy" class="menu-link menu-link_us-s">Legal & Privacy</a></li>
-            <li class="sub-menu__item"><a href="/contact" class="menu-link menu-link_us-s">Contact</a></li>
+            <li class="sub-menu__item"><a href="/shipping_policy" class="menu-link menu-link_us-s">Shipping Policy</a></li>
 
           </ul>
         </div><!-- /.footer-column -->
@@ -1791,7 +1790,7 @@ Karumom PO, Thiruvananthapuram, <br> Kerala – 695002
                 <a href="/auth/login" class="btn btn-primary px-4 py-2 fw-bold mb-2" style="font-size:1.08rem;">Sign
                   In</a>
                 <div class="text-muted mt-3" style="font-size:0.97rem;">
-                  Not a member yet? <a href="/auth/login" class="fw-bold text-success">Create your account now</a> and
+                  Not a member yet? <a href="/auth/login" class="fw-bold gradient-text">Create your account now</a> and
                   start enjoying the perks!
                 </div>
               </div>
