--- a/backend/views/user/orders.ejs
+++ b/backend/views/user/orders.ejs
@@ -1128,8 +1128,8 @@
  <div>
   <img class="footer-logo" src="images/stayrare/footer-logo.png" alt="">
  </div>
-          <p class="footer-address">TC 56/2042 , Manchadi, Anthivilakku, <br>
-Karumom PO, Thiruvananthapuram, <br> Kerala – 695002</p>
+   <p class="footer-address">Stayrare , Thiruvananthapuram, <br> Kerala , India - 695002
+</p>
           <p class="m-0">
            <a style="color: white;" href="mailto:stayrareofficial@gmail.com">✉️ <strong class="fw-medium">stayrareofficial@gmail.com</strong></a>
           </p>
@@ -1176,7 +1176,7 @@ Karumom PO, Thiruvananthapuram, <br> Kerala – 695002</p>
             <li class="sub-menu__item"><a href="/account" class="menu-link menu-link_us-s">My Account</a></li>
             <li class="sub-menu__item"><a href="/terms_and_conditions" class="menu-link menu-link_us-s">Terms & Conditions</a></li>
             <li class="sub-menu__item"><a href="/privacy_policy" class="menu-link menu-link_us-s">Legal & Privacy</a></li>
-            <li class="sub-menu__item"><a href="/contact" class="menu-link menu-link_us-s">Contact</a></li>
+            <li class="sub-menu__item"><a href="/shipping_policy" class="menu-link menu-link_us-s">Shipping Policy</a></li>
 
           </ul>
         </div><!-- /.footer-column -->
