--- a/backend/views/user/product-details.ejs
+++ b/backend/views/user/product-details.ejs
@@ -1751,7 +1751,7 @@
             }
         </style>
         <section class="products-carousel container">
-            <h2 class="h3 text-uppercase mb-4 pb-xl-2 mb-xl-4">Related <strong>Products</strong></h2>
+            <h2 class="h3 text-uppercase mb-4 pb-xl-2 mb-xl-4 gradient-text text-center">Related Products</h2>
 
             <div id="related_products" class="position-relative">
                 <div class="swiper-container js-swiper-slider" data-settings='{
@@ -1803,7 +1803,7 @@
                                                 <% } %>
                                             </p>
                                             <h6 class="pc__title mb-1"><%= product.name %></h6>
-                                            <div class="product-card__price d-flex align-items-center">
+                                            <div class="product-card__price d-flex align-items-center related-cards ">
                                                 <% if (product.salePrice && product.salePrice < product.basePrice) { %>
                                                     <span class="money price-old me-2">₹<%= product.basePrice %></span>
                                                     <span class="money price">₹<%= product.salePrice %></span>
@@ -1885,8 +1885,8 @@
  <div>
   <img class="footer-logo" src="/images/stayrare/footer-logo.png" alt="">
  </div>
-          <p class="footer-address">TC 56/2042 , Manchadi, Anthivilakku, <br>
-Karumom PO, Thiruvananthapuram, <br> Kerala – 695002</p>
+   <p class="footer-address">Stayrare , Thiruvananthapuram, <br> Kerala , India - 695002
+</p>
           <p class="m-0">
            <a style="color: white;" href="mailto:stayrareofficial@gmail.com">✉️ <strong class="fw-medium">stayrareofficial@gmail.com</strong></a>
           </p>
@@ -1933,7 +1933,7 @@ Karumom PO, Thiruvananthapuram, <br> Kerala – 695002</p>
             <li class="sub-menu__item"><a href="/account" class="menu-link menu-link_us-s">My Account</a></li>
             <li class="sub-menu__item"><a href="/terms_and_conditions" class="menu-link menu-link_us-s">Terms & Conditions</a></li>
             <li class="sub-menu__item"><a href="/privacy_policy" class="menu-link menu-link_us-s">Legal & Privacy</a></li>
-            <li class="sub-menu__item"><a href="/contact" class="menu-link menu-link_us-s">Contact</a></li>
+            <li class="sub-menu__item"><a href="/shipping_policy" class="menu-link menu-link_us-s">Shipping Policy</a></li>
 
           </ul>
         </div><!-- /.footer-column -->
