--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -15528,6 +15528,9 @@ textarea.form-control.is-invalid {
   color: #FDD202 !important;
 }
 
+.related-cards{
+  margin-top: 0!important;
+}
 .gradient-text {
   background: linear-gradient(135deg, #3B1E58 0%, #3B1D58 100%);
   -webkit-background-clip: text;
@@ -15537,7 +15540,10 @@ textarea.form-control.is-invalid {
   font-weight: bold;
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-
+.store-card {
+  display: flex!important;
+  gap: 10px!important;
+}
 .price {
   font-size: 1rem;
 }
@@ -20050,7 +20056,25 @@ textarea.form-control.is-invalid {
     --bs-gutter-x: 1.5rem;
   }
 }
+.store-product{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.store-card{
+  flex: 0 0 calc((100% - 30px)/4);
+}
+@media (max-width: 1217px) {
+.store-card{
+  flex: 0 0 calc((100% - 20px)/3);
+}
+}
+@media (max-width: 980px) {
 
+.store-card{
+  flex: 0 0 calc((100% - 10px)/2);
+}
+}
 @media (min-width: 992px) {
   .products-grid .row {
     --bs-gutter-x: 1.875rem;
