--- a/backend/views/user/return-policy.ejs
+++ b/backend/views/user/return-policy.ejs
@@ -31,13 +31,13 @@
         }
         
         .terms-conditions-wrapper {
-            max-width: 1200px;
+            max-width: 90%;
             margin: 0 auto;
   
        
             line-height: 1.6;
             color: var(--theme-color);
-            background-color: var(--background-color);
+         
         }
         
         .terms-conditions-title {
@@ -954,12 +954,13 @@ Phone: +91-6238669487
 
     <div class="terms-conditions-section">
         <h2 class="terms-conditions-section-title">Contact Us</h2>
-        <p class="terms-conditions-text">
-           Email: support@stayrare.com
-Phone: +91-XXXXXXXXXX
-Support Hours: Monday to Saturday, 10 AM – 6 PM
+ <p class="terms-conditions-text">
+           Email: stayrareofficial @gmail.com 
+
 
         </p>
+          <p class="terms-conditions-text">Phone: +91-6238669487</p>
+                    <p class="terms-conditions-text">Support Hours: Monday to Saturday, 10 AM – 6 PM</p>
     </div>
 
     <div class="terms-conditions-footer-note">
@@ -978,8 +979,8 @@ Support Hours: Monday to Saturday, 10 AM – 6 PM
  <div>
   <img class="footer-logo" src="images/stayrare/footer-logo.png" alt="">
  </div>
-          <p class="footer-address">TC 56/2042 , Manchadi, Anthivilakku, <br>
-Karumom PO, Thiruvananthapuram, <br> Kerala – 695002</p>
+    <p class="footer-address">Stayrare , Thiruvananthapuram, <br> Kerala , India - 695002
+</p>
           <p class="m-0">
            <a style="color: white;" href="mailto:stayrareofficial@gmail.com">✉️ <strong class="fw-medium">stayrareofficial@gmail.com</strong></a>
           </p>
@@ -1026,7 +1027,7 @@ Karumom PO, Thiruvananthapuram, <br> Kerala – 695002</p>
             <li class="sub-menu__item"><a href="/account" class="menu-link menu-link_us-s">My Account</a></li>
             <li class="sub-menu__item"><a href="/terms_and_conditions" class="menu-link menu-link_us-s">Terms & Conditions</a></li>
             <li class="sub-menu__item"><a href="/privacy_policy" class="menu-link menu-link_us-s">Legal & Privacy</a></li>
-            <li class="sub-menu__item"><a href="/contact" class="menu-link menu-link_us-s">Contact</a></li>
+            <li class="sub-menu__item"><a href="/shipping_policy" class="menu-link menu-link_us-s">Shipping Policy</a></li>
 
           </ul>
         </div><!-- /.footer-column -->
