--- a/backend/views/user/return-policy.ejs
+++ b/backend/views/user/return-policy.ejs
@@ -23,7 +23,7 @@
 
 
     <!-- Default CSS -->
-  <title>Return & Refund Policy | STAY RARE</title>
+  <title>Return & Refund Policy | STAYRARE</title>
  <style>
         :root {
             --theme-color: #001F3F;
@@ -909,7 +909,7 @@ Phone: +91-6238669487
         <h2 class="terms-conditions-section-title"> Non-Returnable Items</h2>
           <ul class="terms-conditions-list">
                 <li class="terms-conditions-list-item">Products with discounts greater than 30%</li>
-                <li class="terms-conditions-list-item">		Products with discounts greater than 30%</li>
+
                 <li class="terms-conditions-list-item">	Or, you can self-ship to the above return address.</li>
                 <li class="terms-conditions-list-item">	Custom-printed or personalized T-shirts (unless defective)</li>
 
@@ -921,9 +921,9 @@ Phone: +91-6238669487
            <ul class="terms-conditions-list">
                 <li class="terms-conditions-list-item">	Refunds are credited to your Wallet by default.</li>
                 <li class="terms-conditions-list-item">			Upon customer request, we can process the refund to their bank account ( after necessary verification and deduction of any applicable charges).</li>
-                <li class="terms-conditions-list-item">		Upon customer request, we can process the refund to their bank account ( after necessary verification and deduction of any applicable charges).</li>
+
                 <li class="terms-conditions-list-item">		Orders canceled after delivery will incur a  ₹75 reverse pickup fee (or you can self-ship).</li>
-   <li class="terms-conditions-list-item">		•	Self shipping charges are non-refundable.</li>
+   <li class="terms-conditions-list-item">			Self shipping charges are non-refundable.</li>
             </ul>
 
    
