--- a/backend/views/user/home.ejs
+++ b/backend/views/user/home.ejs
@@ -577,12 +577,11 @@
           </div>
 
           <div class="search-popup js-hidden-content">
-            <form action="" method="GET"
-              class="search-field container">
+            <form action="/store" method="GET" class="search-field container">
               <p class="text-uppercase text-secondary fw-medium mb-4">What are you looking for?</p>
               <div class="position-relative">
-                <input class="search-field__input search-popup__input w-100 fw-medium" type="text" name="search-keyword"
-                  placeholder="Search products">
+                <input class="search-field__input search-popup__input w-100 fw-medium" type="text" name="q"
+                  placeholder="Search products, categories, etc.">
                 <button class="btn-icon search-popup__submit" type="submit">
                   <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -594,17 +593,30 @@
 
               <div class="search-popup__results">
                 <div class="sub-menu search-suggestion">
-                  <h6 class="sub-menu__title fs-base">Quicklinks</h6>
+                  <h6 class="sub-menu__title fs-base">Categories</h6>
                   <ul class="sub-menu__list list-unstyled">
-                    <li class="sub-menu__item"><a href="/store" class="menu-link menu-link_us-s">New Arrivals</a>
-                    </li>
-                    <li class="sub-menu__item"><a href="shop.html" class="menu-link menu-link_us-s">Dresses</a></li>
-                    <li class="sub-menu__item"><a href="shop.html" class="menu-link menu-link_us-s">Accessories</a></li>
-                    <li class="sub-menu__item"><a href="shop.html" class="menu-link menu-link_us-s">Footwear</a></li>
-                    <li class="sub-menu__item"><a href="shop.html" class="menu-link menu-link_us-s">Sweatshirt</a></li>
+                    <% if (typeof categories !== 'undefined' && categories.length) { %>
+                      <% categories.forEach(function(category) { %>
+                        <li class="sub-menu__item">
+                          <a href="/store?category=<%= category._id %>" class="menu-link menu-link_us-s"><%= category.name %></a>
+                          <% if (category.activeSubCategories && category.activeSubCategories.length) { %>
+                            <ul class="sub-menu__subcat list-unstyled ms-3">
+                              <% category.activeSubCategories.forEach(function(subcat) { %>
+                                <li>
+                                  <a href="/store?category=<%= category._id %>&subcategory=<%= subcat._id %>" class="menu-link menu-link_us-s">
+                                    <%= subcat.name %>
+                                  </a>
+                                </li>
+                              <% }); %>
+                            </ul>
+                          <% } %>
+                        </li>
+                      <% }); %>
+                    <% } else { %>
+                      <li class="sub-menu__item"><span class="menu-link menu-link_us-s text-muted">No categories</span></li>
+                    <% } %>
                   </ul>
                 </div>
-
                 <div class="search-result row row-cols-5"></div>
               </div>
             </form><!-- /.header-search -->
