--- a/backend/views/user/order-confirmation.ejs
+++ b/backend/views/user/order-confirmation.ejs
@@ -20,7 +20,7 @@
     <meta name="author" content="Trivlogic">
 
     <!-- Favicon -->
-  <link rel="shortcut icon" href="images/stayrare/fav.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/images/stayrare/fav.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.gstatic.com/">
 
   <!-- Fonts -->
@@ -28,9 +28,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Allura&amp;display=swap" rel="stylesheet">
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="css/plugins/swiper.min.css" type="text/css">
-  <link rel="stylesheet" href="css/plugins/jquery.fancybox.css" type="text/css">
-  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="/css/plugins/swiper.min.css" type="text/css">
+  <link rel="stylesheet" href="/css/plugins/jquery.fancybox.css" type="text/css">
+  <link rel="stylesheet" href="/css/style.css" type="text/css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- WebFont.js -->
@@ -468,7 +468,7 @@
 
       <div class="logo">
         <a href="/">
-          <img src="images/stayrare/logo.png" alt="stayrare" class="logo__image d-block">
+          <img src="/images/stayrare/logo.png" alt="stayrare" class="logo__image d-block">
         </a>
       </div><!-- /.logo -->
 
@@ -662,7 +662,7 @@
 
       <div class="logo">
         <a href="/">
-          <img style="top: 50%;" src="images/stayrare/logo.png" alt="Stayrare" class="logo__image d-block">
+          <img style="top: 50%;" src="/images/stayrare/logo.png" alt="Stayrare" class="logo__image d-block">
         </a>
       </div><!-- /.logo -->
 
@@ -814,7 +814,7 @@
       <div class="row row-cols-lg-5 row-cols-2">
         <div class="footer-column footer-store-info col-12 mb-4 mb-lg-0">
  <div>
-  <img class="footer-logo" src="images/stayrare/footer-logo.png" alt="">
+  <img class="footer-logo" src="/images/stayrare/footer-logo.png" alt="">
  </div>
    <p class="footer-address">Stayrare , Thiruvananthapuram, <br> Kerala , India - 695002
 </p>
@@ -981,13 +981,13 @@
   <div class="page-overlay"></div>
 
   <!-- External JavaScripts -->
-  <script src="js/plugins/jquery.min.js"></script>
-  <script src="js/plugins/bootstrap.bundle.min.js"></script>
-  <script src="js/plugins/bootstrap-slider.min.js"></script>
+  <script src="/js/plugins/jquery.min.js"></script>
+  <script src="/js/plugins/bootstrap.bundle.min.js"></script>
+  <script src="/js/plugins/bootstrap-slider.min.js"></script>
   
-  <script src="js/plugins/swiper.min.js"></script>
-  <script src="js/plugins/countdown.js"></script>
-  <script src="js/plugins/jquery.fancybox.js"></script>
+  <script src="/js/plugins/swiper.min.js"></script>
+  <script src="/js/plugins/countdown.js"></script>
+  <script src="/js/plugins/jquery.fancybox.js"></script>
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
     <script src="/js/main.min.js"></script>
